<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.estefany.formulario.MainActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edit_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Nombre_Completo"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/Date_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/MyButton"
        android:text="@string/button_name"
        android:layout_below="@+id/edit_nombre"/>

    <TextView
        android:id="@+id/selected_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Date_button"
        android:hint="@string/textView"
        android:textAlignment="center"
        android:layout_margin="@dimen/activity_vertical_margin"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edit_telefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/selected_date">

        <EditText
            android:id="@+id/input_telefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Telefono"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_telefono">

        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Email"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edit_descripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_email">

        <EditText
            android:id="@+id/input_descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Descripcion"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/Next_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/MyButton"
        android:text="@string/button_name1"
        android:layout_below="@+id/edit_descripcion"/>




</LinearLayout>
