<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_confirmar_datos"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.estefany.formulario.ConfirmarDatos">

    <TextView
        android:id="@+id/Tittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Tittle_Activity2"
        android:textSize="@dimen/tittle"
        android:textAlignment="center"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:textColor="@color/colorPrimary"/>

    <LinearLayout
        android:id="@+id/Linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/Image1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/user_50"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/tittle"/>

        <TextView
            android:id="@+id/Name_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Name_confirm"
            android:layout_margin="@dimen/text_margin"
            android:layout_below="@+id/Tittle"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Linear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/Image2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/birthday_cake_50"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/tittle"/>
        <TextView
            android:id="@+id/Bd_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Bd_confirm"
            android:layout_margin="@dimen/text_margin"
            android:layout_below="@+id/Name_confirm"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/Linear3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/Image3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/shake_phone_50"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/tittle"/>
        <TextView
            android:id="@+id/Phone_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Phone_confirm"
            android:layout_margin="@dimen/text_margin"
            android:layout_below="@+id/Bd_confirm"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/Linear4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/Image4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/gmail_login_48"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/tittle"/>
        <TextView
            android:id="@+id/Email_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Email_confirm"
            android:layout_margin="@dimen/text_margin"
            android:layout_below="@+id/Phone_confirm"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/Linear5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/Image5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/resume_50"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/tittle"/>
        <TextView
            android:id="@+id/Description_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Description_confirm"
            android:layout_margin="@dimen/text_margin"
            android:layout_below="@+id/Email_confirm"/>


    </LinearLayout>

    <Button
        android:id="@+id/Edit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/MyButton"
        android:text="@string/button_edit"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_below="@+id/Description_confirm"/>

</LinearLayout>
